--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+    <script src="https://targeteverest54-dev-ed.develop.my.site.com/Demo/lightning.out.js">
+    </script>
 <html>
 <head>
 <title>Page Title</title>
@@ -7,8 +9,15 @@
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-<div data-lightning-out="true"></div>
+<div id="lightning"/>
 </body>
-    <script src="https://targeteverest54-dev-ed.develop.my.site.com/Demo/lightning.out.js">
-    </script>
+    <script>
+    $Lightning.use("c:LightningOutHelloWorldApp", function(){
+        $Lightning.createComponent("c:helloWorldLWC",{},"lightning",
+                                      function(cmp){
+                                        console.log("Component was created");
+                                      }
+                                   );
+    });
+    </script> 
 </html>
