--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-<div id="lightning"/>
+    <iframe src="https://targeteverest54-dev-ed.develop.my.salesforce.com/apex/PageLightningOut" width="100%" height="500"></iframe> 
 </body>
-    <script>
-    $Lightning.use("c:LightningOutHelloWorldApp", function(){
-        $Lightning.createComponent("c:helloWorldLWC",{},"lightning",
-                                      function(cmp){
-                                        console.log("Component was created");
-                                      }
-                                   );
-    });
-    </script> 
 </html>
