--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-
+    <script src="https://targeteverest54-dev-ed.develop.my.site.com/Demo/lightning.out.js">
+    </script>
 <html>
 <head>
 <title>Page Title</title>
