--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
 <title>Page Title</title>
 </head>
 <body>
-
+<div id="lightning"/>
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
     <iframe src="https://targeteverest54-dev-ed.develop.my.salesforce.com/apex/PageLightningOut.page" width="100%" height="500"></iframe> 
 </body>
+        $Lightning.use("c:LightningOutHelloWorldApp", function(){
+        $Lightning.createComponent("c:helloWorldLWC",{},"lightning",
+                                      function(cmp){
+                                        console.log("Component was created");
+                                      }
+                                   );
+    });
+    </script>
 </html>
