--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <p>This is a paragraph.</p>
     <iframe src="https://targeteverest54-dev-ed.develop.my.salesforce.com/apex/PageLightningOut.page" width="100%" height="500"></iframe> 
 </body>
+    <script>
         $Lightning.use("c:LightningOutHelloWorldApp", function(){
         $Lightning.createComponent("c:helloWorldLWC",{},"lightning",
                                       function(cmp){
