--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-    <iframe src="https://targeteverest54-dev-ed.develop.my.salesforce.com/apex/PageLightningOut.page" width="100%" height="500"></iframe> 
+    <iframe src="https://targeteverest54-dev-ed.develop.my.salesforce.com/apex/PageLightningOut" width="100%" height="500"></iframe> 
 </body>
 
 </html>
