--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
     <p>New</p>
-    <iframe src="https://targeteverest54-dev-ed.develop.my.salesforce.com/apex/PageLightningOut.page" width="100%" height="400"></iframe> 
+    <iframe src="https://targeteverest54-dev-ed.develop.my.salesforce.com/apex/PageLightningOut" width="100%" height="400"></iframe> 
 </body>
 
 </html>
