--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
 <head>
 <title>Page Title</title>
+    <script src="https://targeteverest54-dev-ed.develop.my.site.com/Demo/lightning.out.js">
+    </script>
 </head>
 <body>
 <h1>This is a Heading</h1>
