--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>Page Title</title>
-    <script src="https://targeteverest54-dev-ed.develop.my.site.com/Demo/lightning.out.js">
+    <script src="https://targeteverest54-dev-ed.develop.my.site.com/Demo/lightning/lightning.out.js">
     </script>
 </head>
 <body>
