--- a/index.html
+++ b/index.html
@@ -7,10 +7,37 @@
     </script>
 </head>
 <body>
+<div data-lightning-out="true"></div>
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
     <p>New</p>
     <iframe src="https://targeteverest54-dev-ed.develop.my.salesforce.com/apex/PageLightningOut" width="100%" height="400"></iframe> 
 </body>
+<script>
 
+    const appName = 'c:LightningOutHelloWorldApp';
+    const componentName = 'c:helloWorldLWC';
+    const lightningEndpoint = 'https://targeteverest54-dev-ed.develop.my.site.com/Demo';
+    const targetElement = document.querySelector("[data-lightning-out]");
+    const componentAttributes = {
+
+    };
+
+    $Lightning.use(
+            appName,
+            function (){
+              $Lightning.createComponent(
+                      componentName,
+                      componentAttributes,
+                      targetElement,
+                      function (cmp){
+                        console.log('lightning component created');
+                      }
+              );
+            },
+            lightningEndpoint
+    );
+
+
+  </script>
 </html>
