--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </script>
 </head>
 <body>
-<div id="comp1></div>
+<div id="comp1"></div>
 <div data-lightning-out="true"></div>
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
